fix align

--- a/src/style.css
+++ b/src/style.css
@@ -74,7 +74,7 @@
 
   &__heading {
     margin-bottom: 5px;
-    text-align-last: left;
+    text-align: left;
   }
 
   &__meta {
